Bug#38909 CREATE_OPTIONS in information_schema produces wrong results table->partition_info is unitialized when we open frm file only. The fix is check share->partition_info_len which is set on frm opening stage.